[gd_scene load_steps=2 format=2]

[ext_resource path="res://Utilities/Leaderboard.gd" type="Script" id=1]

[node name="Leaderboard" type="Node2D"]
script = ExtResource( 1 )

[node name="GetTopScoreHTTPRequest" type="HTTPRequest" parent="."]

[node name="GetTopTimeHTTPRequest" type="HTTPRequest" parent="."]

[node name="PostEntryHTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="GetTopScoreHTTPRequest" to="." method="_on_GetTopScoreHTTPRequest_request_completed"]
[connection signal="request_completed" from="GetTopTimeHTTPRequest" to="." method="_on_GetTopTimeHTTPRequest_request_completed"]
[connection signal="request_completed" from="PostEntryHTTPRequest" to="." method="_on_PostEntryHTTPRequest_request_completed"]
